# cutting_plane_max_sum_diversity

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
results/: GKD-c-ct.txt  GKD-c-glover.txt  GKD-c-oa.txt  GKD-c-obma.txt  GKD-c-quad.txt  GKD-d-ct.txt  GKD-d-glover.txt  GKD-d-oa.txt  GKD-d-obma.txt  GKD-d-quad.txt  GKD-d10-ct.txt  GKD-d10-glover.txt  GKD-d10-oa.txt  GKD-d10-obma.txt  GKD-d10-quad.txt  GKD-d15-ct.txt  GKD-d15-glover.txt  GKD-d15-oa.txt  GKD-d15-obma.txt  GKD-d15-quad.txt  GKD-d20-ct.txt  GKD-d20-glover.txt  GKD-d20-oa.txt  GKD-d20-obma.txt  GKD-d20-quad.txt  GKD-d5-ct.txt  GKD-d5-glover.txt  GKD-d5-oa.txt  GKD-d5-obma.txt  GKD-d5-quad.txt  TSP-ct-big.txt  TSP-ct.txt
sh/: bq  run_GKD  run_TSP
src/: OBMA_MDP.cpp  cut_plane.cpp  cut_plane_low_memory.cpp  cut_plane_world.cpp  glover.cpp  max_diversity.hpp  outer_approximation.cpp  quad.cpp  readme.md
